frontend/test/should_fail/exectype_SetmapAdd2.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=42 && y:int=3 && z:string="bla" && {x.add(y,z)});
	}
}